--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.flyway.defaultSchema=app
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=35MB
+
+amazon.aws.access-key=AKIAYZPBGAIHJGTACHKF
+amazon.aws.secret-key=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
+amazon.aws.region=eu-central-1
