bucket name was moved from constants to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.servlet.multipart.max-request-size=35MB
 amazon.aws.access-key=AKIAYZPBGAIHJGTACHKF
 amazon.aws.secret-key=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
 amazon.aws.region=eu-central-1
+amazon.aws.bucket.name=javatests3111222
