--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.password=postgres
 spring.jpa.defer-datasource-initialization=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.flyway.defaultSchema=app
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=35MB
+
+amazon.aws.access-key=AKIAYZPBGAIHJGTACHKF
+amazon.aws.secret-key=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
+amazon.aws.region=eu-central-1
